--- a/my-favourite-pet.html
+++ b/my-favourite-pet.html
@@ -4,16 +4,19 @@
     <title>My favourite pet</title>
   </header>
   <body>
-    <h1>CHIHUAHUA</h1>
-    <p>My favourite pet is a Chihuahua</p>
+    <h1>SALLY</h1>
+    <p>My favourite pet is a Chihuahua called Sally</p>
+    <p>I called her Sally after my best friend called Sally moved and we lost communication.</p>
     <p>Chihuahuas are the smallest breed recognized by some kennel clubs.</p>
     <p>It's named after the state of Chihuahua in Mexico.</p>
     <img src="https://cdn.pixabay.com/photo/2016/04/27/14/53/chihuahua-1356758_960_720.jpg" alt="an image of  Chihuahua" height="300px">
-    <h2>Why i love Chihuahuas</h2>
+    <h2>Why i love Sally so much</h2>
     <ol>
-      <li><strong>They have a cool history</strong></li>
+      <li><strong>Chihuahuas have a cool history</strong></li>
       <p>Chihuahuas have an ancient legacy, dating back to their ancestor, the Techichi. People have loved these companion dogs since around 300 BC. According to popular legend, Chihuahuas are their masters’ guides into heaven.</p>
-      <li><strong>They're a perfect size</strong></li>
-      <p>Some of them are smaller than cats making them cute and able to be carried anywhere.</p>
+      <p>Since Sally is a Chihuahua i find that fact more interesting.</p>
+      <li><strong>Sally has a perfect size</strong></li>
+      <p>Sally is very petite, and can be carried anywhere.</p>
     </ol>
   </body>
+  </html>
