--- a/my-favourite-pet.html
+++ b/my-favourite-pet.html
@@ -1,15 +1,18 @@
 <DOCTYPE html>
   <html>
-  <header>
+  <head>
     <title>My favourite pet</title>
-  </header>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+  </head>
   <body>
     <h1>SALLY</h1>
+    <hr>
     <p>My favourite pet is a Chihuahua called Sally</p>
     <p>I called her Sally after my best friend called Sally moved and we lost communication.</p>
     <p>Chihuahuas are the smallest breed recognized by some kennel clubs.</p>
     <p>It's named after the state of Chihuahua in Mexico.</p>
     <img src="https://cdn.pixabay.com/photo/2016/04/27/14/53/chihuahua-1356758_960_720.jpg" alt="an image of  Chihuahua" height="300px">
+    <hr>
     <h2>Why i love Sally so much</h2>
     <ol>
       <li><strong>Chihuahuas have a cool history</strong></li>
@@ -18,5 +21,40 @@
       <li><strong>Sally has a perfect size</strong></li>
       <p>Sally is very petite, and can be carried anywhere.</p>
     </ol>
+    <h2>Other list of my favourite activities are:</h2>
+    <ul>
+      <li><strong>Reading novels</strong></li>
+      <p>My passion is in reading novels.</p>
+      <p>Some of the novels that I'v read are;</p>
+      <ol>
+        <li><em>Across the bridge</em></li>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/71nZttjLp8L._SL500_.jpg" alt="image of Across the bridge novel" height=300px>
+
+        <div id="crime">
+        <li><em>My life in crime</em></li>
+        <img src="http://4.bp.blogspot.com/-GOmszPvRDCs/UKqI4Q2rWKI/AAAAAAAAKGQ/kfyawBSFIEE/s1600/My+life+in+crime.jpg" alt="image of My life in crime novel" height=300px>
+      </div>
+      </ol>
+      <li><strong>Watching movies</strong></li>
+<p>Some of the amazing movies and shows that I've watched are;</p>
+<li><em>Empire</em></li>
+<img src="http://www.gstatic.com/tv/thumb/tvbanners/14287791/p14287791_b_v8_ab.jpg" alt="Image of empire show" height=300px>
+  <div id="movies">
+<li><em>The greatest showman</em></li>
+<img src="https://upload.wikimedia.org/wikipedia/en/1/10/The_Greatest_Showman_poster.png" alt="Image of the The Greatest Showman poster" height=300px>
+</div>
+<li><strong>Blogging</strong></li>
+      <p>Blogging is my best because I express myself and educate others in my Tech Blog.</p>
+    </ul>
+    <hr>
+    <div id="license">
+      <p>&copy; Copyright 2018 MutumaMutuma</p>
+    </div>
+    <footer>
+      <p>Posted by: Lewis Mutuma</p>
+      <p>phone no.:0718919780</p>
+      <p>Contact information: <a href="lewismutuma1000@gmail.com">
+  lewismutuma1000@gmail.com</a>.</p>
+</footer>
   </body>
   </html>
